CREATE DATABASE floreser_db;
USE floreser_db;

-- 2. TABELAS INDEPENDENTES
CREATE TABLE ESPECIE(
ID_ESPECIE INT PRIMARY KEY AUTO_INCREMENT,
NOME_CIENTIFICO VARCHAR(100) UNIQUE NOT NULL,
NOME_POUPULAR VARCHAR(100) NOT NULL,
ESPECIE_FRUTIFERA TINYINT(1) NOT NULL,
FASES_CRESCIMENTO TEXT NOT NULL,
TIPO_PLANTA VARCHAR(20) NOT NULL,
BIOMA_ORIGEM VARCHAR (15) NOT NULL
);
-- 3. HIERARQUIA USUARIO (SUPERCLASSE)
CREATE TABLE USUARIO(
TIPO_USUARIO ENUM('PessoaFisica','PessoaJuridica','ONG','Administrador') NOT NULL,
ID_USUARIO INT PRIMARY KEY AUTO_INCREMENT,
EMAIL VARCHAR(100) UNIQUE NOT NULL,
TELEFONE CHAR(11),
SENHAHASH VARCHAR(255) NOT NULL,
ENDERECO TEXT NOT NULL,
PONTUACAO DECIMAL (10, 2) DEFAULT 0.00
);
-- 4. SUBCLASSES (HERANÇA - CHAVE COMPARTILHADA)
CREATE TABLE PESSOA_FISICA(
ID_USUARIO INT PRIMARY KEY,
CPF CHAR(11) UNIQUE NOT NULL,
DATA_NASCIMENTO DATE NOT NULL,
FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO(ID_USUARIO)
);
CREATE TABLE PESSOA_JURIDICA(
ID_USUARIO INT PRIMARY KEY,
CNPJ CHAR(14) UNIQUE NOT NULL,
DATA_CRIACAO DATE NOT NULL,
FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO(ID_USUARIO)
);
CREATE TABLE ONG(
ID_USUARIO INT PRIMARY KEY,
CNPJ CHAR(14) UNIQUE NOT NULL,
DATA_CRIACAO DATE NOT NULL,
FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO(ID_USUARIO)
);
-- 5. TABELA DE TRANSAÇÃO E REFERÊNCIA
CREATE TABLE PLANTIO (
ID_USUARIO INT NOT NULL,
ID_PLANTIO INT PRIMARY KEY AUTO_INCREMENT,
LOCALIZACAO POINT NOT NULL,
DATA_PLANTIO DATE NOT NULL,
STATUS_MONITORAMENTO VARCHAR(50) NOT NULL,
FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO(ID_USUARIO)
);
CREATE TABLE PONTO_RETIRADA(
ID_PONTO_RETIRADA INT PRIMARY KEY NOT NULL AUTO_INCREMENT,
ID_USUARIO INT NOT NULL,
NOME_LOCAL VARCHAR(100) NOT NULL,
LOCALIZACAO POINT NOT NULL,
FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO (ID_USUARIO)
);
-- 6. TABELAS DE JUNÇÃO (N:M - CHAVES COMPOSTAS)
CREATE TABLE DETALHE_PLANTIO(
ID_PLANTIO INT NOT NULL,
ID_ESPECIE INT NOT NULL,
QUANTIDADE_MUDAS INT NOT NULL,
PRIMARY KEY(ID_PLANTIO, ID_ESPECIE),
CONSTRAINT fk_detalhe_plantio_plantio FOREIGN KEY  (ID_PLANTIO) REFERENCES PLANTIO(ID_PLANTIO),
CONSTRAINT fk_detalhe_plantio_especie FOREIGN KEY (ID_ESPECIE) REFERENCES ESPECIE(ID_ESPECIE)
);
CREATE TABLE ESTOQUE_MUDAS(
ID_PONTO_RETIRADA INT NOT NULL,
ID_ESPECIE INT NOT NULL,
QUANTIDADE_DISPONIVEL INT NOT NULL,
ATUALIZACAO DATETIME NOT NULL,
PRIMARY KEY(ID_PONTO_RETIRADA, ID_ESPECIE),
CONSTRAINT fk_estoque_mudas_ponto_retirada FOREIGN KEY (ID_PONTO_RETIRADA) REFERENCES PONTO_RETIRADA (ID_PONTO_RETIRADA),
CONSTRAINT fk_estoque_mudas_especie FOREIGN KEY (ID_ESPECIE)  REFERENCES ESPECIE (ID_ESPECIE)
);
-- 7. TABELA DE CONTEÚDO
CREATE TABLE CONTEUDO(
ID_CONTEUDO INT PRIMARY KEY NOT NULL AUTO_INCREMENT,
ID_USUARIO_AUTOR INT NOT NULL,
CORPO_TEXTO TEXT NOT NULL,
DATA_PUBLICACAO DATETIME NOT NULL,
TIPO_CONTEUDO ENUM ('Noticia', 'Artigo', 'Dica', 'Curiosidade')NOT NULL,
FOREIGN KEY(ID_USUARIO_AUTOR) REFERENCES USUARIO (ID_USUARIO)
);
